# WavInCloud

./: .env.example  .isort.cfg  README.md
back-end/: .env.example  app.py  pyproject.toml
back-end/database/: db_engine.py  db_models.py  db_utils.py
back_end/: .gitignore  .pre-commit-config.yaml  app.py  pyproject.toml
back_end/database/: db_models.py  db_utils.py
back_end/tests/: conftest.py  test_db_crud.py
front-end/: package-lock.json
front-end/src/routes/: +page.svelte  index.svelte
front_end/: vite.config.js
front_end/src/routes/: __layout.svelte
