[tool.poetry]
name = "wavincloud"
version = "0.1.0"
description = ""
authors = ["qivaijar <qivaijar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.14"
python-dotenv = "^1.0.0"
soundfile = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
